--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             position: absolute;
             top: 46%; left: 50%;
             transform: translate3d(-50%, -50%, -300px);
-            width: 400px; height: 400px;
+            width: 500px; height: 500px; /* INCREASED HITBOX SIZE */
             display: flex; flex-direction: column; align-items: center; justify-content: center;
             z-index: 10; pointer-events: none;
             will-change: transform;
@@ -118,7 +118,7 @@
         #ring-container {
             position: absolute; top: 50%; left: 50%;
             transform: translate(-50%, -25%); 
-            width: 220px; height: 220px;
+            width: 450px; height: 450px; /* INCREASED VISUAL SIZE */
             display: flex; justify-content: center; align-items: center;
         }
         .ring { position: absolute; border-radius: 50%; box-sizing: border-box; }
