--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>Pokémon GO Clone v26</title>
+    <title>Pokémon GO Clone v27</title>
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -1170,7 +1170,7 @@
 <body>
 
     <div id="game-stage">
-        <div id="version-tag">v26.0</div>
+        <div id="version-tag">v27.0</div>
         <div id="player-hud">
             <div id="avatar-bubble" onclick="UI.openStorage()"><img
                     src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/trainers/red.png"></div>
@@ -1313,7 +1313,7 @@
 
     <script>
         const ASSETS = { poke: "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/", item: "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/" };
-        const STORAGE_KEY = 'pokecatch_v26_save';
+        const STORAGE_KEY = 'pokecatch_v27_save';
         let Data = {
             user: { level: 1, xp: 0, nextLevelXp: 1000, candy: 0 },
             inventory: { 'Poke Ball': 50, 'Great Ball': 10, 'Ultra Ball': 5, 'Master Ball': 1, 'Stardust': 500, 'Razz Berry': 10, 'Nanab Berry': 10, 'Pinap Berry': 10 },
@@ -1375,6 +1375,22 @@
 
                         fetch(`https://pokeapi.co/api/v2/pokemon/${id}`).then(r => r.json()).then(pData => {
                             sprite.src = pData.sprites.other['official-artwork'].front_default || pData.sprites.front_default;
+
+                            // ASSIGN MOVES & HP
+                            const movesRaw = pData.moves;
+                            const moves = [];
+                            if (movesRaw && movesRaw.length > 0) {
+                                for (let i = 0; i < 2; i++) {
+                                    const m = movesRaw[Math.floor(Math.random() * movesRaw.length)].move;
+                                    moves.push({ name: m.name, power: Math.floor(Math.random() * 40) + 20, type: 'normal' }); // Fallback power
+                                }
+                            } else {
+                                moves.push({ name: 'Tackle', power: 20, type: 'normal' }, { name: 'Struggle', power: 35, type: 'normal' });
+                            }
+
+                            Game.state.mon.moves = moves;
+                            Game.state.mon.maxHp = Math.floor(cp / 10) + 50; // HP Formula
+
                             sprite.onload = () => { sprite.style.transform = 'scale(1)'; sprite.style.opacity = 1; };
                         });
 
@@ -1392,7 +1408,44 @@
             autoSwitchBall: () => { const order = ['Poke Ball', 'Great Ball', 'Ultra Ball', 'Master Ball']; for (let ball of order) { if (Data.inventory[ball] > 0) { Game.state.ball = ball; UI.updateIcon(); UI.spawnFloatText(`Switched to ${ball}!`, window.innerWidth / 2, window.innerHeight - 100, "#2196F3"); return true; } } return false; },
             loop: () => { if (Game.state.mode === 'hold') { if (Math.abs(Game.state.spin) > 0.5) { Game.state.rot += Game.state.spin * 15; document.getElementById('ball-sprite').style.transform = `rotate(${Game.state.rot}deg)`; if (Math.abs(Game.state.spin) > 2 && Math.random() > 0.6) FX.sparkle(Game.state.pos.x, Game.state.pos.y); } Game.state.spin *= 0.9; } else if (Game.state.mode === 'fly') { const s = Game.state; s.pos.x += s.vel.x; s.pos.y += s.vel.y; s.pos.z += s.vel.z; s.vel.y += 0.85; s.vel.z *= 0.98; s.vel.x += s.spin * 0.45; s.rot += s.spin * 20 + 5; const scale = 900 / (900 + s.pos.z); const b = document.getElementById('ball-container'); const g = document.getElementById('ball-sprite'); b.style.left = s.pos.x + 'px'; b.style.top = s.pos.y + 'px'; b.style.transform = `translate3d(-50%, -50%, 0) scale(${scale})`; g.style.transform = `rotate(${s.rot}deg)`; if (s.pos.z > 250 && s.pos.z < 380) { const rect = document.getElementById('pokemon-container').getBoundingClientRect(); if (s.pos.x > rect.left && s.pos.x < rect.right && s.pos.y > rect.top && s.pos.y < rect.bottom) Game.hit(); } if (s.pos.z > 450 || s.pos.y > window.innerHeight) Game.miss(); } requestAnimationFrame(Game.loop); },
             hit: () => { Game.state.mode = 'catch'; const outer = document.getElementById('ring-outer').offsetWidth; const target = document.getElementById('ring-target').offsetWidth; const ratio = target / outer; const ballRect = document.getElementById('ball-container').getBoundingClientRect(); const bx = ballRect.left + ballRect.width / 2; const by = ballRect.top + ballRect.height / 2; const ringRect = document.getElementById('ring-target').getBoundingClientRect(); const rx = ringRect.left + ringRect.width / 2; const ry = ringRect.top + ringRect.height / 2; const dist = Math.sqrt(Math.pow(bx - rx, 2) + Math.pow(by - ry, 2)); const innerRadius = ringRect.width / 2; const landedInRing = dist < (innerRadius + 20); let msg = "", col = "white", gradeBonus = 1.0; if (landedInRing) { if (ratio < 0.3) { msg = "Excellent!"; col = "#FFD700"; Game.state.throwGrade = "Excellent"; gradeBonus = 1.85; } else if (ratio < 0.7) { msg = "Great!"; col = "#F44336"; Game.state.throwGrade = "Great"; gradeBonus = 1.5; } else { msg = "Nice!"; col = "white"; Game.state.throwGrade = "Nice"; gradeBonus = 1.2; } } else { Game.state.throwGrade = null; } if (msg) UI.spawnFloatText(msg, bx, by, col); let base = 0.40; const ballRate = Meta.balls[Game.state.ball].rate; const berryMod = Game.state.berry ? Meta.berries[Game.state.berry].mod : 1.0; const curveMod = Game.state.isCurve ? 1.7 : 1.0; let chance = base * ballRate * berryMod * gradeBonus * curveMod; if (Game.state.ball === 'Master Ball') chance = 100; Game.state.shakeTarget = (Math.random() < chance) ? 3 : Math.floor(Math.random() * 3); document.getElementById('ring-container').style.display = 'none'; const b = document.getElementById('ball-container'); const p = document.getElementById('pokemon-container').getBoundingClientRect(); b.style.transition = 'all 0.1s linear'; b.style.left = (p.left + p.width / 2) + 'px'; b.style.top = (p.top + p.height / 2) + 'px'; b.style.transform = `translate(-50%, -50%) scale(0.7)`; const sprite = document.getElementById('pokemon-sprite'); sprite.style.transition = 'all 0.4s ease-in'; sprite.style.transform = 'scale(0) rotate(270deg)'; sprite.style.opacity = 0; setTimeout(() => { b.style.transition = 'top 0.4s ease-out'; b.style.top = (p.bottom - 40) + 'px'; setTimeout(() => Game.playShake(0), 400); }, 400); },
-            playShake: (count) => { const b = document.getElementById('ball-sprite'); b.parentElement.classList.remove('shake'); void b.parentElement.offsetWidth; if (count >= 3) { document.getElementById('ball-container').classList.add('catch-flash'); Data.storage.unshift({ id: Game.state.mon.id, name: Game.state.mon.n, cp: Game.state.mon.cp, family: Game.state.mon.family, nextId: Game.state.mon.nextId, date: new Date().toLocaleDateString() }); Game.save(); setTimeout(() => { document.getElementById('ball-container').classList.remove('catch-flash'); Game.showResults(); }, 1000); return; } if (count < Game.state.shakeTarget) { b.parentElement.classList.add('shake'); setTimeout(() => Game.playShake(count + 1), 1000); } else { UI.spawnFloatText("Escaped!", window.innerWidth / 2, window.innerHeight / 2, "white"); document.getElementById('ball-container').style.display = 'none'; const s = document.getElementById('pokemon-sprite'); s.style.transform = 'scale(1)'; s.style.opacity = 1; document.getElementById('ring-container').style.display = 'flex'; Game.state.berry = null; document.getElementById('active-berry').style.display = 'none'; setTimeout(Game.resetBall, 1000); } },
+            playShake: (count) => {
+                const b = document.getElementById('ball-sprite');
+                b.parentElement.classList.remove('shake');
+                void b.parentElement.offsetWidth;
+                if (count >= 3) {
+                    document.getElementById('ball-container').classList.add('catch-flash');
+
+                    // SAVE WITH MOVES & HP
+                    Data.storage.unshift({
+                        id: Game.state.mon.id,
+                        name: Game.state.mon.n,
+                        cp: Game.state.mon.cp,
+                        maxHp: Game.state.mon.maxHp, // Use the maxHp from Game.state.mon
+                        moves: Game.state.mon.moves, // Use the moves from Game.state.mon
+                        family: Game.state.mon.family,
+                        nextId: Game.state.mon.nextId,
+                        date: new Date().toLocaleDateString()
+                    });
+
+                    Game.save();
+                    setTimeout(() => { document.getElementById('ball-container').classList.remove('catch-flash'); Game.showResults(); }, 1000);
+                    return;
+                }
+                if (count < Game.state.shakeTarget) {
+                    b.parentElement.classList.add('shake');
+                    setTimeout(() => Game.playShake(count + 1), 1000);
+                } else {
+                    UI.spawnFloatText("Escaped!", window.innerWidth / 2, window.innerHeight / 2, "white");
+                    document.getElementById('ball-container').style.display = 'none';
+                    const s = document.getElementById('pokemon-sprite');
+                    s.style.transform = 'scale(1)';
+                    s.style.opacity = 1;
+                    document.getElementById('ring-container').style.display = 'flex';
+                    Game.state.berry = null;
+                    document.getElementById('active-berry').style.display = 'none';
+                    setTimeout(Game.resetBall, 1000);
+                }
+            },
             showResults: () => { const s = Game.state; const res = document.getElementById('result-overlay'); const list = document.getElementById('bonus-list'); const spriteSrc = document.getElementById('pokemon-sprite').src; document.getElementById('res-poke-img').src = spriteSrc; document.getElementById('res-poke-name').innerText = s.mon.n + " (CP " + s.mon.cp + ")"; let xp = 100; list.innerHTML = ''; if (s.throwGrade) { let bonus = s.throwGrade === 'Excellent' ? 1000 : (s.throwGrade === 'Great' ? 500 : 100); xp += bonus; list.innerHTML += `<div class="stat-row bonus-row"><span>${s.throwGrade} Throw</span><span>+${bonus} XP</span></div>`; } if (s.isCurve) { xp += 20; list.innerHTML += `<div class="stat-row bonus-row"><span>Curveball</span><span>+20 XP</span></div>`; } document.getElementById('total-xp-val').innerText = xp + " XP"; let candy = s.berry === 'Pinap Berry' ? 6 : 3; document.getElementById('res-candy').innerText = "+" + candy; const family = s.mon.family; if (!Data.candyBag) Data.candyBag = {}; if (!Data.candyBag[family]) Data.candyBag[family] = 0; Data.candyBag[family] += candy; Data.user.xp += xp; Data.inventory['Stardust'] += 100; if (Data.user.xp >= Data.user.nextLevelXp) { setTimeout(Game.levelUp, 1000); } else { Game.save(); UI.updateHUD(); } document.getElementById('gameplay-ui').style.display = 'none'; res.style.display = 'flex'; setTimeout(() => res.classList.add('visible'), 10); },
             levelUp: () => { document.getElementById('result-overlay').classList.remove('visible'); document.getElementById('result-overlay').style.display = 'none'; Data.user.level++; Data.user.xp -= Data.user.nextLevelXp; Data.user.nextLevelXp = Math.floor(Data.user.nextLevelXp * 1.5); const rewards = []; for (let i = 0; i < 5; i++) { const keys = Object.keys(Data.inventory); const item = keys[Math.floor(Math.random() * keys.length)]; if (item === 'Master Ball' || item === 'Stardust') continue; Data.inventory[item] += 5; rewards.push(item); } Game.save(); UI.updateHUD(); document.getElementById('new-level-num').innerText = Data.user.level; const grid = document.getElementById('lvl-up-rewards'); grid.innerHTML = ''; const counts = {}; rewards.forEach(x => { counts[x] = (counts[x] || 0) + 5; }); for (let k in counts) { let img = ""; if (Meta.balls[k]) img = Meta.balls[k].img; else img = Meta.berries[k].img; grid.innerHTML += `<div class="reward-item"><img src="${ASSETS.item + img}" width="40"><span style="font-weight:bold; margin-top:5px;">+${counts[k]}</span></div>`; } const lvl = document.getElementById('levelup-overlay'); lvl.style.display = 'flex'; setTimeout(() => lvl.classList.add('visible'), 10); },
             claimRewards: () => { const lvl = document.getElementById('levelup-overlay'); lvl.classList.remove('visible'); setTimeout(() => { lvl.style.display = 'none'; Game.nextPokemon(); }, 300); },
