--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>Pokémon GO Clone v27</title>
+    <title>Pokémon GO Clone v28</title>
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -1149,6 +1149,69 @@
         .sort-opt:active {
             background: #f0f0f0;
         }
+
+        /* INVENTORY BUTTON */
+        #btn-inventory-hub {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            width: 50px;
+            height: 50px;
+            background: white;
+            border-radius: 50%;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 500;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+
+        #btn-inventory-hub:active {
+            transform: scale(0.9);
+        }
+
+        /* STORAGE TABS */
+        .storage-tab {
+            flex: 1;
+            text-align: center;
+            padding: 15px;
+            font-weight: bold;
+            color: #888;
+            cursor: pointer;
+            border-bottom: 3px solid transparent;
+        }
+
+        .storage-tab.active {
+            color: #2196F3;
+            border-bottom: 3px solid #2196F3;
+        }
+
+        /* ITEMS GRID */
+        .item-row {
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            border-bottom: 1px solid #eee;
+        }
+
+        .item-row img {
+            width: 40px;
+            margin-right: 15px;
+        }
+
+        .item-name {
+            flex: 1;
+            font-size: 16px;
+            font-weight: 500;
+            color: #333;
+        }
+
+        .item-qty {
+            font-weight: bold;
+            color: #555;
+        }
     </style>
     <script>
         if ('serviceWorker' in navigator) {
@@ -1169,22 +1232,30 @@
 
 <body>
 
-    <div id="game-stage">
-        <div id="version-tag">v27.0</div>
-        <div id="player-hud">
-            <div id="avatar-bubble" onclick="UI.openStorage()"><img
-                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/trainers/red.png"></div>
-            <div id="level-indicator">1</div>
-            <div id="xp-bar-container">
-                <div id="xp-fill"></div>
-            </div>
+    <!-- PLAYER HUD (MOVED OUTSIDE GAME-STAGE FOR EXPLORE MODE VISIBILITY) -->
+    <div id="player-hud">
+        <div id="avatar-bubble" onclick="UI.openStorage()"><img
+                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/trainers/red.png"></div>
+        <div id="level-indicator">1</div>
+        <div id="xp-bar-container">
+            <div id="xp-fill"></div>
         </div>
+    </div>
+
+    <div id="game-stage">
+        <div id="version-tag">v28.0</div>
     </div>
 
     <!-- SCREENS -->
     <div id="explore-screen" class="screen active">
         <div id="world-map"></div>
         <img id="player-avatar" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png">
+
+        <!-- INVENTORY BUTTON -->
+        <div id="btn-inventory-hub" onclick="UI.openStorage()">
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/poke-ball.png" width="40">
+        </div>
+
         <div id="joystick-zone">
             <div id="joystick-knob"></div>
         </div>
@@ -1262,12 +1333,22 @@
             </div>
             <button id="btn-claim" class="btn-action" onclick="Game.claimRewards()">CLAIM</button>
         </div>
+
+        <!-- UPDATED STORAGE SCREEN -->
         <div id="storage-screen">
             <div id="storage-header">
-                <span>Pokemon Storage</span>
+                <span>Inventory</span>
                 <button onclick="UI.closeStorage()"
                     style="border:none; background:none; font-size:24px; color:#555; padding:0 10px;">✕</button>
             </div>
+
+            <!-- TABS -->
+            <div id="storage-tabs" style="display:flex; width:100%; border-bottom:1px solid #ddd; background:white;">
+                <div id="tab-pokemon" class="storage-tab active" onclick="UI.switchTab('pokemon')">POKÉMON</div>
+                <div id="tab-items" class="storage-tab" onclick="UI.switchTab('items')">ITEMS</div>
+            </div>
+
+            <!-- POKEMON CONTROLS -->
             <div id="storage-controls">
                 <input type="text" id="search-input" placeholder="Search" onkeyup="UI.filterStorage()">
                 <button id="sort-btn" onclick="UI.toggleSortMenu()">⇅</button>
@@ -1278,8 +1359,13 @@
                 <div class="sort-opt" onclick="UI.setSort('number')">Number #</div>
                 <div class="sort-opt" onclick="UI.setSort('name')">Name A-Z</div>
             </div>
+
+            <!-- CONTENT GRIDS -->
             <div id="storage-grid"></div>
+            <div id="items-grid"
+                style="display:none; padding:15px; padding-bottom:100px; width:100%; box-sizing:border-box;"></div>
         </div>
+
         <div id="raid-modal" class="modal-screen">
             <div class="modal-card">
                 <h2 id="raid-title" style="color:#9C27B0">RAID BATTLE</h2>
@@ -1458,6 +1544,7 @@
         const UI = {
             sortMode: 'recent',
             selectionCallback: null, // <--- ADDED CALLBACK STORAGE
+            currentTab: 'pokemon', // NEW
             toggleSortMenu: () => { document.getElementById('sort-menu').style.display = document.getElementById('sort-menu').style.display === 'flex' ? 'none' : 'flex'; },
             setSort: (mode) => { UI.sortMode = mode; document.getElementById('sort-menu').style.display = 'none'; UI.renderStorageList(); },
             filterStorage: () => { UI.renderStorageList(); },
@@ -1467,11 +1554,56 @@
             close: () => document.getElementById('menu-drawer').classList.remove('open'),
             select: (type, key) => { if (Data.inventory[key] <= 0) return; if (type === 'ball') { Game.state.ball = key; UI.updateIcon(); } else { if (Game.state.berry) return; Data.inventory[key]--; Game.state.berry = key; document.getElementById('active-berry').src = ASSETS.item + Meta.berries[key].img; document.getElementById('active-berry').style.display = 'block'; UI.spawnFloatText(key + "!", window.innerWidth / 2, window.innerHeight / 2, "#E91E63"); } UI.close(); UI.updateHUD(); },
             updateIcon: () => { const img = Meta.balls[Game.state.ball].img; document.getElementById('current-ball-icon').src = ASSETS.item + img; document.getElementById('ball-sprite').style.backgroundImage = `url('${ASSETS.item + img}')`; },
-            openStorage: (isSelection = false, callback = null) => { // <--- UPDATED SIGNATURE
+            switchTab: (tabName) => {
+                UI.currentTab = tabName;
+                // Update tab styling
+                document.getElementById('tab-pokemon').classList.toggle('active', tabName === 'pokemon');
+                document.getElementById('tab-items').classList.toggle('active', tabName === 'items');
+                // Show/hide appropriate content
+                document.getElementById('storage-grid').style.display = tabName === 'pokemon' ? 'grid' : 'none';
+                document.getElementById('items-grid').style.display = tabName === 'items' ? 'block' : 'none';
+                // Show/hide search controls (only for Pokemon tab)
+                document.getElementById('storage-controls').style.display = tabName === 'pokemon' ? 'flex' : 'none';
+                // Render appropriate content
+                if (tabName === 'pokemon') UI.renderStorageList();
+                else UI.renderItemsList();
+            },
+            renderItemsList: () => {
+                const grid = document.getElementById('items-grid');
+                grid.innerHTML = '';
+                // Render all inventory items
+                for (let itemName in Data.inventory) {
+                    const qty = Data.inventory[itemName];
+                    let imgSrc = '';
+                    // Determine image source
+                    if (Meta.balls[itemName]) {
+                        imgSrc = ASSETS.item + Meta.balls[itemName].img;
+                    } else if (Meta.berries[itemName]) {
+                        imgSrc = ASSETS.item + Meta.berries[itemName].img;
+                    } else if (itemName === 'Stardust') {
+                        imgSrc = 'https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/stardust.png';
+                    } else {
+                        imgSrc = 'https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/rare-candy.png'; // fallback
+                    }
+                    const row = document.createElement('div');
+                    row.className = 'item-row';
+                    row.innerHTML = `
+                        <img src="${imgSrc}" onerror="this.src='https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/poke-ball.png'">
+                        <div class="item-name">${itemName}</div>
+                        <div class="item-qty">x${qty}</div>
+                    `;
+                    grid.appendChild(row);
+                }
+            },
+            openStorage: (isSelection = false, callback = null) => {
                 document.getElementById('storage-screen').style.display = 'flex';
                 UI.selectionCallback = isSelection ? callback : null;
-                document.getElementById('storage-header').querySelector('span').innerText = isSelection ? "Select Pokemon" : "Pokemon Storage";
-                UI.renderStorageList();
+                document.getElementById('storage-header').querySelector('span').innerText = isSelection ? "Select Pokemon" : "Inventory";
+                // Hide pokeball button
+                const pokeballBtn = document.getElementById('btn-inventory-hub');
+                if (pokeballBtn) pokeballBtn.style.display = 'none';
+                // Reset to pokemon tab and render
+                UI.switchTab('pokemon');
             },
             renderStorageList: () => {
                 const grid = document.getElementById('storage-grid'); grid.innerHTML = '';
@@ -1482,7 +1614,6 @@
                     const originalIndex = Data.storage.indexOf(p);
                     const card = document.createElement('div');
                     card.className = 'storage-card';
-                    // <--- UPDATED CLICK HANDLER
                     card.onclick = () => {
                         if (UI.selectionCallback) UI.selectionCallback(originalIndex);
                         else PokeDetail.open(originalIndex);
@@ -1491,7 +1622,13 @@
                     grid.appendChild(card);
                 });
             },
-            closeStorage: () => { document.getElementById('storage-screen').style.display = 'none'; UI.selectionCallback = null; }
+            closeStorage: () => {
+                document.getElementById('storage-screen').style.display = 'none';
+                UI.selectionCallback = null;
+                // Show pokeball button again
+                const pokeballBtn = document.getElementById('btn-inventory-hub');
+                if (pokeballBtn) pokeballBtn.style.display = 'flex';
+            }
         };
 
         // MAIN ENTRY
