Change avatar image source in player HUD
Updated avatar image source for player HUD.

--- a/index.html
+++ b/index.html
@@ -1234,8 +1234,9 @@
 
     <!-- PLAYER HUD (MOVED OUTSIDE GAME-STAGE FOR EXPLORE MODE VISIBILITY) -->
     <div id="player-hud">
-        <div id="avatar-bubble" onclick="UI.openStorage()"><img
-                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/trainers/red.png"></div>
+        <div id="avatar-bubble" onclick="UI.openStorage()">
+            <img src="https://play.pokemonshowdown.com/sprites/trainers/red.png" style="width:100%; height:100%; object-fit:contain;">
+        </div>
         <div id="level-indicator">1</div>
         <div id="xp-bar-container">
             <div id="xp-fill"></div>
