Update player avatar image source

--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
     <!-- SCREENS -->
     <div id="explore-screen" class="screen active">
         <div id="world-map"></div>
-        <img id="player-avatar" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png">
+        <img id="player-avatar" src="https://play.pokemonshowdown.com/sprites/trainers/red.png" style="width: 60px; height: 60px;">
 
         <!-- INVENTORY BUTTON -->
         <div id="btn-inventory-hub" onclick="UI.openStorage()">
